--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
-   
   },
   "scripts": {
     "start": "react-scripts start",
